definindo nova variavel de ambiente

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node build/server.js",
+    "build": "tsup src --out-dir build",
     "dev": "tsx watch --no-cache src/server.ts"
   },
   "keywords": [],
